--- a/MvcGuessMySonsName/Web.config
+++ b/MvcGuessMySonsName/Web.config
@@ -17,6 +17,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FacebookAppId" value="447260055333297" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
