Mouse over info

--- a/MvcGuessMySonsName/MvcGuessMySonsName.csproj
+++ b/MvcGuessMySonsName/MvcGuessMySonsName.csproj
@@ -239,8 +239,10 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Images\group.gif" />
     <Content Include="Images\ibilnumsmall.png" />
-    <Content Include="Scripts\Facebook.js" />
+    <Content Include="Scripts\globalize.culture.is-IS.js" />
+    <Content Include="Scripts\globalize.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -296,6 +298,7 @@
     <Content Include="Views\Account\_RemoveExternalLoginsPartial.cshtml" />
     <Content Include="Views\Account\_SetPasswordPartial.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Guesses\NameGuesses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
